# aiplane

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.cursor/rules/: aiplane-agent-guidance.mdc
.githooks/: pre-push
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml  verify-release.yml
config-templates/: credentials.example.yaml  local.yaml
docs/project/: README.md  agent-guidance.md  ci-and-release-process.md  ci-wheel-artifacts.md  code-quality-review-2026-07.md  command-coverage.md  development.md  external-trial-evidence.md  host-client-export-scope-exception.md  integrations-roadmap.md  p0-maintainer-checklist.md  preview-scope-freeze.md  product-adoption-backlog-2026-07.md  project-plan.md  public-demo-plan.md  public-launch-review.md  release-process.md  repository-protection.md  roadmap.md  session-handoff.md  strategy.md  threat-model.md
docs/project/releases/: v0.1.0.md  v0.1.1.md
docs/project/reviews/: dev-mvp-0.5-latest-review-evaluation.md  milestone-6-8-code-review-handoff.md
docs/project/trial-evidence/: template.json
docs/user/: README.md  benchmarks.md  cloud-deployment.md  doctor-contract.md  evidence-collection.md  hardware.md  index.md  integrations.md  machines-and-stacks.md  manual-test-checklist.md  mcp.md  model-capabilities.md  overview.md  platform-support.md  profile-schema.md  providers.md  runtime-model-map.md  setup.md  tools.md  workflows.md
profile-templates/local-dev/: approvals.yaml  backends.yaml  environment.yaml  hardware.yaml  model-providers.yaml  models.yaml  repository.yaml  targets.yaml  tools.yaml
profiles/local-dev/: backends.yaml  environment.yaml  machine-discovery-cache.json  model-providers.yaml  models.generated.yaml  models.yaml  orchestrators.yaml  targets.yaml
schemas/: aiplane-adapter-v1.schema.json  aiplane-agent-environment-v1.schema.json  aiplane-artifact-lock-v1.schema.json  aiplane-benchmark-measurements-v1.schema.json  aiplane-benchmark-suite-v1.schema.json  aiplane-deployment-artifacts-v1.schema.json  aiplane-kubernetes-artifacts-v1.schema.json  aiplane-profile-v1.schema.json  aiplane-runtime-bundle-v1.schema.json  aiplane-runtime-launch-v1.schema.json
scripts/: activate_env.sh  benchmark_catalog_queries.py  build_local_wheel.py  check.sh  format.sh  ollama_helper.sh  provider_helper.sh  render_release_notes.py  setup_env.sh  test-clean.sh  validate_trial_evidence.py  verify_install_channels.py  verify_release_manifest.py  version.py  write_release_evidence.py
skills/aiplane/: SKILL.md
skills/aiplane/agents/: openai.yaml
src/aiplane/: __init__.py  adapter_protocol.py  agent_frameworks.py  agents.py  approvals.py  artifact_validation.py  audit.py  azure_cli.py  azure_inventory.py  backends.py  benchmark_comparison.py  benchmark_evidence.py  benchmark_tools.py  benchmarks.py  boundaries.py  cli.py  cli_config.py  cli_deploy_remote.py  cli_execution.py  cli_governance.py  cli_hardware.py  cli_help.py  cli_integrations.py  cli_launch_support.py  cli_models.py  cli_parser.py  cli_presenters.py  cli_profile_support.py  cli_profiles.py  cli_providers.py  cli_public.py  cli_public_workflows.py  cli_runtimes.py  cli_setup.py  cli_stacks.py  cli_support.py  cli_support_catalog.py  cli_version.py  code_tasks.py  config.py  (+57 more)
tests/: artifact_fixtures.py  boundary_fakes.py  cli_fixtures.py  conftest.py  http_fixtures.py  profile_fixtures.py  runtime_fixtures.py  support.py  test_adapter_protocol.py  test_agent_frameworks.py  test_architecture_boundaries.py  test_artifact_schema_validation.py  test_audit_recovery.py  test_benchmark_comparison.py  test_benchmark_evidence.py  test_boundaries.py  test_bridge_cli.py  test_cli_error_boundary.py  test_cli_version.py  test_contracts.py  test_deploy_remote.py  test_docker_model_runner.py  test_environment_tools_benchmarks.py  test_evidence_contract.py  test_external_artifact_validation.py  test_feature_milestones.py  test_governance_cli.py  test_hardware_machines.py  test_hardware_scoring.py  test_install_verifier.py  test_integration_imports.py  test_integrations_chat.py  test_kubernetes_artifacts.py  test_local_config.py  test_local_doctor.py  test_materialized_catalog.py  test_mcp.py  test_mcp_guards.py  test_model_catalog_mutation.py  test_model_listing.py  (+29 more)
tests/fixtures/: adapter-v1.json  local-model-cache.yaml  primary-runtime-contracts.json  toolchain-synthetic.json
tests/golden/integrations/v1/: aider.sh  codex.toml  continue.yaml  copilot-cli.json  copilot-vscode.json  generic-mcp.json  openai-compatible.json
tests/performance/: test_catalog_query_performance.py
