[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aiplane"
version = "0.1.1"
description = "Environment doctor and configuration compiler for local and hybrid AI development"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = []
keywords = ["ai-development", "environment", "configuration", "diagnostics", "reproducibility", "local-ai", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/ocagdas/aiplane"
Documentation = "https://github.com/ocagdas/aiplane/tree/main/docs/user"
Repository = "https://github.com/ocagdas/aiplane.git"
Issues = "https://github.com/ocagdas/aiplane/issues"

[project.scripts]
aiplane = "aiplane.cli:main"

[project.optional-dependencies]
dev = [
  "pytest==8.4.2",
  "pytest-xdist==3.8.0",
  "setuptools==83.0.0",
  "ruff==0.12.0",
  "black==25.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools]
script-files = ["scripts/provider_helper.sh", "scripts/ollama_helper.sh"]

[tool.setuptools.data-files]
"config-templates" = [
  "config-templates/local.yaml",
  "config-templates/credentials.example.yaml",
]
"schemas" = ["schemas/aiplane-profile-v1.schema.json"]
"profile-templates/local-dev" = [
  "profile-templates/local-dev/approvals.yaml",
  "profile-templates/local-dev/backends.yaml",
  "profile-templates/local-dev/environment.yaml",
  "profile-templates/local-dev/hardware.yaml",
  "profile-templates/local-dev/model-providers.yaml",
  "profile-templates/local-dev/models.yaml",
  "profile-templates/local-dev/orchestrators.yaml",
  "profile-templates/local-dev/repository.yaml",
  "profile-templates/local-dev/targets.yaml",
  "profile-templates/local-dev/tools.yaml",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
